fix(carousel/cards): set text align to initial
Fixes #72.

--- a/src/carousel/cards.module.scss
+++ b/src/carousel/cards.module.scss
@@ -12,6 +12,7 @@ $margin: 20px;
   border: 1px solid map.get(config.$colors, 'accents-2');
   border-top: none;
   cursor: pointer;
+  text-align: initial;
 }
 
 .card:first-child {
